# slide-scraper

./: README.md  main.py  pyproject.toml
